rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__array_upper_string.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"SELECT array_upper(ARRAY['a', 'b']) v1\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+----+
| v1 |
+----+
| 2  |
+----+
