rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__cast_float_to_text.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"SELECT (11.0::double precision)::text AS eleven;\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+--------+
| eleven |
+--------+
| 11     |
+--------+
