rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__coerce_string_to_number.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"SELECT COS('0')\".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+----------------+
| cos(Utf8("0")) |
+----------------+
| 1              |
+----------------+
