rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__cube_scan_exec.snap
---
source: cubesql/src/compile/mod.rs
expression: context.execute_query(query).await.unwrap()
---
+----------+
| dim_str0 |
+----------+
| foo      |
+----------+
