rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__cube_scan_time_measure.snap
---
source: cubesql/src/compile/mod.rs
expression: context.execute_query(query).await.unwrap()
---
+-------------------------+-------------------------+
| start                   | end                     |
+-------------------------+-------------------------+
| 2024-12-01T00:00:00.000 | 2024-12-31T00:00:00.000 |
+-------------------------+-------------------------+
