rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__current_date.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"SELECT current_timestamp::date = current_date\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+---------------+
| Boolean(true) |
+---------------+
| true          |
+---------------+
