rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__current_schema_postgres.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"SELECT current_schema()\".to_string(),\n              DatabaseProtocol::PostgreSQL).await?"
---
+------------------+
| current_schema() |
+------------------+
| public           |
+------------------+
