rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__current_schemas_including_implicit_postgres.snap
---
source: cubesql/src/compile/mod.rs
assertion_line: 5301
expression: "execute_query(\"SELECT current_schemas(true)\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+--------------------------------+
| current_schemas(Boolean(true)) |
+--------------------------------+
| {pg_catalog,public}            |
+--------------------------------+
